# cargo-apk-rust-flags-repro

./: Cargo.toml
src/: lib.rs
